The usual suspects (#691)
* fjernet parameter som bare ble brukt i en feilmelding som aldri oppstår

* fjernet feil factory som bare bre brukt til logging

* hygiene 101

* inline exceptions og warnings

* ingen vits med else når vi returnerer overalt

* fjerne exception som aldri kastes, og the usua suspects

* fjernet ubrukt exception

* visibility

* flt ut noeher