@@ -1,6 +1,6 @@
 package no.nav.vedtak.sikkerhet.loginmodule.oidc;
 
-import java.util.Collections;
+import java.util.Map;
 
 import javax.security.auth.login.AppConfigurationEntry;
 
@@ -10,9 +10,9 @@ public class OIDCLoginConfiguration implements LoginConfiguration {
 
     private static final AppConfigurationEntry[] OIDC_CONFIGURATION = new AppConfigurationEntry[] {
             new AppConfigurationEntry(
-                "no.nav.vedtak.sikkerhet.loginmodule.oidc.OIDCLoginModule",
-                AppConfigurationEntry.LoginModuleControlFlag.REQUISITE,
-                Collections.emptyMap())
+                    "no.nav.vedtak.sikkerhet.loginmodule.oidc.OIDCLoginModule",
+                    AppConfigurationEntry.LoginModuleControlFlag.REQUISITE,
+                    Map.of())
     };
 
     @Override
